// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/List/Element WithAttributes play-test 1`] = `
<div data-test-block="true">
  <ul>
    <li id="htmlid"
        class="_element_bxsik_1 dummyClassname"
        lang="nb"
        data-testid="123ID"
    >
      Kjenner du behovet til brukeren?
    </li>
  </ul>
</div>
`;

exports[`Tester/List/Element WithRef play-test 1`] = `
<div data-test-block="true">
  <ul>
    <li class="_element_bxsik_1 "
        id="dummyIdForwardedFromRef"
    >
      Kjenner du behovet til brukeren?
    </li>
  </ul>
</div>
`;
